--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hothook",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Outstanding set of React hooks",
   "author": "Reykjavik151",
   "license": "MIT",
@@ -21,7 +21,7 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d dist"
   },
   "peerDependencies": {
     "lodash": "^4.17.21",
