--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hothook",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Outstanding set of React hooks",
   "author": "Reykjavik151",
   "license": "MIT",
@@ -14,14 +14,12 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "run-s build"
   },
   "peerDependencies": {
     "lodash": "^4.17.21",
